--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 body, div{
     transition: background-color 0.3s ease-in-out;
+    transition: box-shadow 0.15s ease-in-out;
 }
 
 p, span, h1, h2, h3{
