--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body, div{
     transition: background-color 0.3s ease-in-out;
-    transition: box-shadow 0.3s linear;
+    transition: box-shadow 0.3s ease;
 }
 
 a, p, span, h1, h2, h3{
